kubernetes/06-spark.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-master
  namespace: nexoryx-alluxio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spark-master
  template:
    metadata:
      labels:
        app: spark-master
    spec:
      containers:
      - name: spark-master
        image: bitnami/spark:latest
        ports:
        - containerPort: 7077
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: spark-master
  namespace: nexoryx-alluxio
spec:
  selector:
    app: spark-master
  ports:
  - name: spark
    port: 7077
  - name: web
    port: 8080
