kubernetes/08-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alluxio-ingress
  namespace: nexoryx-alluxio
spec:
  ingressClassName: nginx
  rules:
  - host: alluxio.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: alluxio-master
            port:
              number: 19999
